<resources>
    <string name="app_name">MyFirstApplication</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="writeOffSystem">报销系统</string>
    <string name="complete">完成</string>
    <string name="back">返回</string>
    <string name="setUp">设置</string>
    <string name="delete">删除</string>
    <string name="fill">适配</string>

</resources>
